--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <body>
     <div class="container">
-        <!-- <div class="logo">
-           <img src="src/images/logo.png" alt="Logo">
-        </div> -->
+        <div class="logo">
+           <h4>Contact us via <a href="mailto:gofactory.info@gmail.com">gofactory.info@gmail.com</a> - Ioan Elian Grigoriu, Mirta Medak</h4>
+        </div>
         <div class="content">
             <h1>Coming Soon</h1>
             <a href="/src/GoFactoryCatalogue.pdf" class="download-button" download>Download our catalogue (PDF)</a>
