--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
            <h4>Contact us via <a href="mailto:gofactory.info@gmail.com">gofactory.info@gmail.com</a> - Ioan Elian Grigoriu, Mirta Medak</h4>
         </div>
         <div class="content">
-            <h1>Coming Soon</h1>
+            <h2>Webshop coming soon</h2>
             <a href="/src/GoFactoryCatalogue.pdf" class="download-button" download>Download our catalogue (PDF)</a>
         </div>
     </div>
